--- a/Debug/makefile
+++ b/Debug/makefile
@@ -12,6 +12,7 @@ RM := rm -rf
 -include Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
 -include Core/Src/subdir.mk
+-include Core/Application/Working/subdir.mk
 -include Core/Application/Messages/subdir.mk
 -include objects.mk
 
@@ -35,34 +36,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := FMmodulator
+BUILD_ARTIFACT_NAME := FMmodulator-STM32
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-FMmodulator.elf \
+FMmodulator-STM32.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-FMmodulator.list \
+FMmodulator-STM32.list \
 
 OBJCOPY_BIN += \
-FMmodulator.bin \
+FMmodulator-STM32.bin \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: FMmodulator.elf secondary-outputs
+main-build: FMmodulator-STM32.elf secondary-outputs
 
 # Tool invocations
-FMmodulator.elf: $(OBJS) $(USER_OBJS) /home/davide/STM32CubeIDE/workspace_1.7.0/FMmodulator/STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "FMmodulator.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/davide/STM32CubeIDE/workspace_1.7.0/FMmodulator/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FMmodulator.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+FMmodulator-STM32.elf: $(OBJS) $(USER_OBJS) C:\Users\David\STM32CubeIDE\workspace_1.8.0\FMmodulator-STM32\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "FMmodulator-STM32.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\David\STM32CubeIDE\workspace_1.8.0\FMmodulator-STM32\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FMmodulator-STM32.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -71,19 +72,19 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-FMmodulator.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "FMmodulator.list"
+FMmodulator-STM32.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "FMmodulator-STM32.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-FMmodulator.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "FMmodulator.bin"
+FMmodulator-STM32.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "FMmodulator-STM32.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) FMmodulator.bin FMmodulator.elf FMmodulator.list default.size.stdout
+	-$(RM) FMmodulator-STM32.bin FMmodulator-STM32.elf FMmodulator-STM32.list default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
